--- a/HouseSales/app/src/main/res/layout/example.xml
+++ b/HouseSales/app/src/main/res/layout/example.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="House_title"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textStyle="bold" />
 
         <TextView
@@ -48,14 +48,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="House_price"
-            android:textColor="@color/black"
+            android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/house_buy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Купить" />
+            android:text="Купить"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 </LinearLayout>
