--- a/HouseSales/app/src/main/res/navigation/mobile_navigation.xml
+++ b/HouseSales/app/src/main/res/navigation/mobile_navigation.xml
@@ -19,7 +19,7 @@
 
     <fragment
         android:id="@+id/nav_slideshow"
-        android:name="com.example.housesales.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:name="com.example.housesales.ui.create.CreateFragment"
+        android:label="Добавление записи"
+        tools:layout="@layout/menu_create_house" />
 </navigation>
